--- a/index.htm
+++ b/index.htm
@@ -6,13 +6,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Today's Jobs ✅</h1>
-  <ul id="taskList">
-    <li><input type="checkbox" id="task1"><label for="task1">Make your bed</label></li>
-    <li><input type="checkbox" id="task2"><label for="task2">Brush your teeth</label></li>
-    <li><input type="checkbox" id="task3"><label for="task3">Feed the pet</label></li>
-    <li><input type="checkbox" id="task4"><label for="task4">Tidy your toys</label></li>
-  </ul>
+<body>
+  <h1>Choose Your Name</h1>
+  <div class="buttons">
+    <a href="bentley.html" class="btn">👦 Bentley</a>
+    <a href="isabella.html" class="btn">👧 Isabella</a>
+  </div>
+</body>
   <script src="script.js"></script>
 </body>
 </html>
