--- a/index.htm
+++ b/index.htm
@@ -6,13 +6,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<body>
-  <h1>Choose Your Name</h1>
+ <body>
+    <h1>🎯 Choose Your Name</h1>
+
   <div class="buttons">
-    <a href="bentley.html" class="btn">👦 Bentley</a>
-    <a href="isabella.html" class="btn">👧 Isabella</a>
+    <a href="bentley.html" class="btn bentley">👦 Bentley</a>
+    <a href="isabella.html" class="btn isabella">👧 Isabella</a>
   </div>
 </body>
+
   <script src="script.js"></script>
 </body>
 </html>
