--- a/Isabella.html
+++ b/Isabella.html
@@ -22,16 +22,12 @@
       <label for="itask2">👗 Put away clothes</label>
     </div>
     <div class="task-box">
-      <input type="checkbox" id="itask3">
-      <label for="itask3">🛌 Bed made</label>
-    </div>
-    <div class="task-box">
       <input type="checkbox" id="itask4">
       <label for="itask4">🪟 Curtains opened</label>
     </div>
     <div class="task-box">
       <input type="checkbox" id="itask5">
-      <label for="itask5">🪥 Teeth Brushed</label>
+      <label for="itask5">🪥 Teeth Brushed Morning & Night</label>
     </div>
     <div class="task-box">
       <input type="checkbox" id="itask6">
@@ -52,3 +48,4 @@
   <script src="isabella.js"></script>
 </body>
 </html>
+
