--- a/Bentley.html
+++ b/Bentley.html
@@ -21,9 +21,9 @@
       <input type="checkbox" id="btask2">
       <label for="btask2">🪥 Brush your teeth</label>
     </div>
-    <div class="task-box">
+       <div class="task-box">
       <input type="checkbox" id="btask3">
-      <label for="btask3">🧸 Tidy your toys</label>
+      <label for="btask3">Hoover or sweep hallway/frontroom/landing and bedrooms</label>
     </div>
     <div class="task-box">
       <input type="checkbox" id="btask4">
@@ -48,4 +48,3 @@
   <script src="bentley.js"></script>
 </body>
 </html>
-
