--- a/Isabella.html
+++ b/Isabella.html
@@ -12,26 +12,26 @@
     🏆 Points: <span id="pointsTotal">0</span>
   </div>
 
-  <div class="task-container">
+   <div class="task-container">
     <div class="task-box">
-      <input type="checkbox" id="itask1">
-      <label for="itask1">🛏️ Make your bed</label>
+      <input type="checkbox" id="btask1">
+      <label for="btask1">🛏️ Make your bed</label>
     </div>
     <div class="task-box">
-      <input type="checkbox" id="itask2">
-      <label for="itask2">👗 Put away clothes</label>
+      <input type="checkbox" id="btask2">
+      <label for="btask2">🪥 Brush your teeth</label>
+    </div>
+       <div class="task-box">
+      <input type="checkbox" id="btask3">
+      <label for="btask3">Hoover or sweep hallway/frontroom/landing and bedrooms</label>
     </div>
     <div class="task-box">
-      <input type="checkbox" id="itask3">
-      <label for="itask3">🪟 Curtains opened</label>
+      <input type="checkbox" id="btask4">
+      <label for="btask4">🪟 Open the curtains</label>
     </div>
     <div class="task-box">
-      <input type="checkbox" id="itask4">
-      <label for="itask4">🪥 Teeth Brushed Morning & Night</label>
-    </div>
-    <div class="task-box">
-      <input type="checkbox" id="itask5">
-      <label for="itask5">🪮 Hair Brushed</label>
+      <input type="checkbox" id="btask5">
+      <label for="btask5">🪮 Brush your hair</label>
     </div>
   </div>
 
@@ -45,9 +45,6 @@
 </div>
 
   <a href="index.html" class="back-btn">⬅️ Back to Home</a>
-  <script src="Isabella.js"></script>
+  <script src="isabella.js"></script>
 </body>
 </html>
-
-
-
