--- a/Isabella.html
+++ b/Isabella.html
@@ -45,6 +45,7 @@
 </div>
 
   <a href="index.html" class="back-btn">⬅️ Back to Home</a>
-  <script src="isabella.js"></script>
+  <script src="Isabella.js"></script>
 </body>
 </html>
+
