--- a/Isabella.html
+++ b/Isabella.html
@@ -23,7 +23,7 @@
     </div>
        <div class="task-box">
       <input type="checkbox" id="btask3">
-      <label for="btask3">Hoover or sweep hallway/frontroom/landing and bedrooms</label>
+      <label for="btask3">👕 Clothes out for the next day</label>
     </div>
     <div class="task-box">
       <input type="checkbox" id="btask4">
@@ -34,6 +34,22 @@
       <label for="btask5">🪮 Brush your hair</label>
     </div>
   </div>
+
+<h2>🌟 Bonus Jobs</h2>
+<div class="task-container">
+  <div class="task-box">
+    <input type="checkbox" id="itaskBonus1">
+    <label for="itaskBonus1">🧼 Whipe sides and clean the Bathroom</label>
+  </div>
+  <div class="task-box">
+    <input type="checkbox" id="itaskBonus2">
+    <label for="itaskBonus2">🧺 Bring everyones washing down</label>
+  </div>
+         <div class="task-box">
+      <input type="checkbox" id="itaskBonus3">
+      <label for="itaskBonus3">🧹 Hoover or sweep hallway/frontroom/landing and bedrooms</label>
+    </div>
+</div>
 
   <div id="celebration" style="display:none;">🎉 Great job Isabella! You finished everything!</div>
 
@@ -48,4 +64,3 @@
   <script src="Isabella.js"></script>
 </body>
 </html>
-
