--- a/index.html
+++ b/index.html
@@ -10,9 +10,27 @@
     <h1>🎯 Choose Your Name</h1>
 
   <div class="buttons">
-    <a href="Bentley.html" class="btn bentley">👦 Bentley</a>
-    <a href="Isabella.html" class="btn isabella">👧 Isabella</a>
+    <a href="bentley.html" class="btn bentley">👦 Bentley</a>
+    <a href="isabella.html" class="btn isabella">👧 Isabella</a>
   </div>
+
+  <h2>📝 Daily Jobs & Points</h2>
+<ul class="job-list">
+  <li>🛏️ Make your bed — 1 point</li>
+  <li>🪥 Brush your teeth — 2 points</li>
+  <li>👕 Clothes out for the next day — 3 points</li>
+  <li>🪟 Open the curtains — 1 point</li>
+  <li>🪮 Brush your hair — 2 points</li>
+</ul>
+
+<h2>🌟 Bonus Jobs</h2>
+<ul class="job-list">
+  <li>🧼 Wipe sides & clean the bathroom — 4 points</li>
+  <li>🧺 Bring everyone's washing down — 5 points</li>
+  <li>🧹 Hoover or sweep hallway/frontroom/landing and bedrooms — 6 points</li>
+</ul>
+
+
 </body>
 
   <script src="script.js"></script>
