--- a/Isabella.html
+++ b/Isabella.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Isabella's Jobs</title>
   <link rel="stylesheet" href="style.css">
+
 </head>
 <body class="isabella-theme">
   <h1><u>Hi Isabella!</u> 👧</h1>
@@ -61,6 +62,7 @@
 </div>
 
   <a href="index.html" class="back-btn">⬅️ Back to Home</a>
+   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script src="Isabella.js"></script>
 </body>
 </html>
