--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>🎯 Choose Your Name</h1>
 
   <div class="buttons">
-    <a href="bentley.html" class="btn bentley">👦 Bentley</a>
-    <a href="isabella.html" class="btn isabella">👧 Isabella</a>
+    <a href="Bentley.html" class="btn bentley">👦 Bentley</a>
+    <a href="Isabella.html" class="btn isabella">👧 Isabella</a>
   </div>
 
   <h2>📝 Daily Jobs & Points</h2>
