--- a/Bentley.html
+++ b/Bentley.html
@@ -37,6 +37,7 @@
   </div>
 
   <a href="index.html" class="back-btn">⬅️ Back to Home</a>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script src="bentley.js"></script>
 </body>
 </html>
